@@ -10,6 +10,17 @@ in the release notes.
 
 All ports committers are allowed to commit to this file.
 
+20070306:
+AUTHOR: portmgr@FreeBSD.org
+The following changes were made to the ports infrastructure:
+
+  * The remainging vestiges of FreeBSD 4.X support were removed.  Any
+    remaining users of 4.X should have stayed with the RELENG_4_EOL tag.
+
+  * It is now possible to include USE_PHP after bsd.port.pre.mk.
+
+  * 'make search' should now work with non-default ${PORTSDIR}.
+
 20070130:
 AUTHOR: portmgr@FreeBSD.org
 The following changes were made to the ports infrastructure:
